--- a/static/css/mainPageStyle/mainStyle.scss
+++ b/static/css/mainPageStyle/mainStyle.scss
@@ -18,7 +18,8 @@
 @import "../shared/soundSwitch",
         "../shared/onload",
         "../shared/popUpBalls",
-        "../shared/gameGift";
+        "../shared/gameGift",
+        "../shared/checkRegistration";
 
 body {
   background-color: var(--background-color);
