--- a/static/css/loginPageStyle/login.scss
+++ b/static/css/loginPageStyle/login.scss
@@ -39,6 +39,11 @@
     background-color: #FF4A15;
     border-radius: 2vw;
     font-size: 2vw;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: #8f280b;
+    }
 
     @include mobile {
       height: 11.5vw;
@@ -54,6 +59,11 @@
     background-color: #D92446;
     border-radius: 2vw;
     font-size: 2vw;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: #932d16;
+    }
 
     @include mobile {
       height: 11.5vw;
@@ -192,6 +202,16 @@
         background-color: #FF4A15;
         margin-right: 1.1vw;
         font-size: 1.1vw;
+        transition: background-color 0.2s ease;
+        position: relative;
+
+        &:hover {
+          background-color: #932d16;
+        }
+
+        &:active {
+          top: 0.1vw;
+        }
 
         @include mobile {
           height: 8vw;
@@ -297,9 +317,19 @@
         height: 2vw;
         width: 9vw;
         border-radius: 2vw;
-        background-color: #FF4A15;
+        background-color: #ff4015;
         margin-right: 1.1vw;
         font-size: 1.1vw;
+        transition: background-color 0.2s ease;
+        position: relative;
+
+        &:hover {
+          background-color: #932d16;
+        }
+
+        &:active {
+          top: 0.1vw;
+        }
 
         @include mobile {
           height: 8vw;
