--- a/static/css/mainPageStyle/mainStyle.css
+++ b/static/css/mainPageStyle/mainStyle.css
@@ -292,33 +292,72 @@ svg * {
 }
 
 .suppliers {
-  display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
-  grid-template-rows: 0.4fr 1fr 1fr 1fr 1fr;
-  grid-template-areas: "heading heading heading heading";
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-items: center;
   height: 100%;
+  row-gap: 0.5vw;
 }
 .suppliers__heading {
   grid-area: heading;
   color: var(--background-color-el);
   font-size: 2vw;
   font-weight: bold;
+  height: 10%;
 }
 @media (max-width: 900px) {
   .suppliers__heading {
     font-size: 2.5vw;
   }
 }
-.suppliers__image {
-  object-fit: contain;
-  height: 5vw;
+.suppliers .suppliers-rows-1 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 20%;
+  column-gap: 1vw;
 }
-@media (max-width: 900px) {
-  .suppliers__image {
-    height: 12vw;
-  }
+.suppliers .suppliers-rows-1 .suppliers__image {
+  object-fit: contain;
+  width: 9vw;
+  cursor: pointer;
+}
+.suppliers .suppliers-rows-2 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 20%;
+  column-gap: 2vw;
+}
+.suppliers .suppliers-rows-2 .suppliers__image {
+  object-fit: contain;
+  width: 6.2vw;
+  cursor: pointer;
+}
+.suppliers .suppliers-rows-3 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 20%;
+  column-gap: 1vw;
+}
+.suppliers .suppliers-rows-3 .suppliers__image {
+  object-fit: contain;
+  width: 9vw;
+  cursor: pointer;
+}
+.suppliers .suppliers-rows-4 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height: 20%;
+  column-gap: 1.5vw;
+}
+.suppliers .suppliers-rows-4 .suppliers__image {
+  object-fit: contain;
+  width: 6.5vw;
+  cursor: pointer;
 }
 
 .profile-and-date-container {
@@ -505,6 +544,13 @@ svg * {
   height: 2.2vw;
   align-items: center;
   cursor: pointer;
+  position: relative;
+}
+.profile-actions-container .rewards-button:hover {
+  background-color: #932d16;
+}
+.profile-actions-container .rewards-button:active {
+  top: 0.1vw;
 }
 @media (max-width: 900px) {
   .profile-actions-container .rewards-button {
@@ -563,6 +609,13 @@ svg * {
   justify-content: center;
   box-shadow: 0 0.2vw 0.2vw 0 rgba(0, 0, 0, 0.3882352941);
   cursor: pointer;
+  position: relative;
+}
+.profile-actions-container .check-registration-button:hover {
+  background-color: #932d16;
+}
+.profile-actions-container .check-registration-button:active {
+  top: 0.1vw;
 }
 @media (max-width: 900px) {
   .profile-actions-container .check-registration-button {
@@ -1275,11 +1328,13 @@ svg * {
 .puzzle-game-container {
   background-color: var(--background-color);
   width: 35vw;
-  height: 27vw;
+  height: 26vw;
   border-radius: 1vw;
   display: flex;
   flex-direction: column;
   align-items: center;
+  row-gap: 1vw;
+  transition: height 1s ease;
 }
 @media (max-width: 900px) {
   .puzzle-game-container {
@@ -1327,14 +1382,8 @@ svg * {
 
 .puzzle-game {
   display: flex;
-  height: 94%;
   justify-content: center;
   flex-direction: column;
-}
-@media (max-width: 900px) {
-  .puzzle-game {
-    height: 83%;
-  }
 }
 
 .puzzle-board {
@@ -1378,6 +1427,19 @@ svg * {
 
 .empty {
   background-color: transparent;
+}
+
+.puzzle-result-game {
+  text-align: center;
+  width: 40%;
+  font-size: 1.5vw;
+}
+@media (max-width: 900px) {
+  .puzzle-result-game {
+    margin-top: 3.3vw;
+    width: 60%;
+    font-size: 4vw;
+  }
 }
 
 .wheel-game-wrapper {
@@ -1847,6 +1909,143 @@ svg * {
 @media (max-width: 900px) {
   .game-gift__text {
     font-size: 5.5vw;
+  }
+}
+
+.registration-check-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.registration-check-container {
+  background-color: var(--background-color);
+  width: 30vw;
+  height: 12vw;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  border-radius: 1.5vw;
+  row-gap: 1vw;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  padding: 1vw 0 0 0;
+}
+@media (max-width: 900px) {
+  .registration-check-container {
+    width: 76vw;
+    height: 38vw;
+    border-radius: 4.5vw;
+    row-gap: 4vw;
+  }
+}
+.registration-check-container .registration-check-head {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2vw;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-head {
+    font-size: 7vw;
+  }
+}
+.registration-check-container .registration-check-head .registration-check-head-cross {
+  width: 1.5vw;
+  position: absolute;
+  right: 1vw;
+  top: 0;
+  cursor: pointer;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-head .registration-check-head-cross {
+    width: 4.5vw;
+    right: 2vw;
+    top: 1vw;
+  }
+}
+.registration-check-container .registration-check-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1vw;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-form {
+    row-gap: 3vw;
+  }
+}
+.registration-check-container .registration-check-form .registration-check-input-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+.registration-check-container .registration-check-form .registration-check-input-container .registration-check-input-label {
+  font-size: 1.5vw;
+  margin-right: 1vw;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-form .registration-check-input-container .registration-check-input-label {
+    font-size: 4.5vw;
+    margin-right: 2vw;
+  }
+}
+.registration-check-container .registration-check-form .registration-check-input-container .registration-check-input {
+  height: 2.5vw;
+  border-radius: 2vw;
+  padding-left: 1vw;
+  color: black;
+  width: 21.5vw;
+  font-size: 1vw;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-form .registration-check-input-container .registration-check-input {
+    height: 8.5vw;
+    border-radius: 5vw;
+    padding-left: 2vw;
+    width: 50.5vw;
+    font-size: 3vw;
+  }
+}
+.registration-check-container .registration-check-form .registration-check-button-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.registration-check-container .registration-check-form .registration-check-button-container .registration-check-button {
+  height: 2vw;
+  width: 9vw;
+  border-radius: 2vw;
+  background-color: #FF4A15;
+  margin-right: 1.1vw;
+  font-size: 1.1vw;
+  cursor: pointer;
+  position: relative;
+}
+.registration-check-container .registration-check-form .registration-check-button-container .registration-check-button:hover {
+  background-color: #932d16;
+}
+.registration-check-container .registration-check-form .registration-check-button-container .registration-check-button:active {
+  top: 0.1vw;
+}
+@media (max-width: 900px) {
+  .registration-check-container .registration-check-form .registration-check-button-container .registration-check-button {
+    height: 7vw;
+    width: 30vw;
+    border-radius: 4vw;
+    margin-right: 4.1vw;
+    font-size: 3.1vw;
   }
 }
 
