--- a/static/css/supplierPageStyle/supplierMainStyle.css
+++ b/static/css/supplierPageStyle/supplierMainStyle.css
@@ -298,7 +298,7 @@ svg * {
   color: #6D6D6D;
   display: flex;
   flex-direction: column;
-  padding: 0.2vw 2.5vw 5vw 2.5vw;
+  padding: 0.2vw 2.5vw 2vw 2.5vw;
   row-gap: 1.5vw;
 }
 @media (max-width: 900px) {
@@ -384,10 +384,15 @@ svg * {
   display: flex;
   width: 100%;
   height: 100%;
-  box-shadow: 0px 4px 24.5px 0px rgba(0, 0, 0, 0.2509803922);
+  box-shadow: 0 0.2vw 0.5vw 0 rgba(0, 0, 0, 0.2509803922);
   flex-direction: column;
   border-radius: 1vw;
-  padding: 1vw 2.2vw 2vw 2.2vw;
+  padding: 1vw 2.2vw 1vw 2.2vw;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper {
+    padding: 1vw 2.2vw 3vw 2.2vw;
+  }
 }
 .reviews-wrapper .reviews-comment-wrapper .reviews-comment-head__text {
   font-size: 1.5vw;
@@ -403,6 +408,7 @@ svg * {
   flex-direction: column;
   row-gap: 1vw;
   max-height: 26vw;
+  min-height: 2vw;
   overflow-y: auto;
 }
 @media (max-width: 900px) {
@@ -419,6 +425,14 @@ svg * {
   background-color: rgba(0, 0, 0, 0.2509803922);
   border-radius: 24px;
 }
+.reviews-wrapper .reviews-comment-wrapper .reviews-container .empty-review {
+  font-size: 1vw;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper .reviews-container .empty-review {
+    font-size: 3vw;
+  }
+}
 .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container {
   display: grid;
   grid-template-rows: 2vw 6vw;
@@ -430,7 +444,7 @@ svg * {
   .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container {
     grid-template-rows: 4vw 12vw;
     grid-template-columns: 68vw 14vw;
-    height: 15vw;
+    height: 16vw;
   }
 }
 .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-profile-name {
@@ -481,9 +495,6 @@ svg * {
 }
 .reviews-wrapper .reviews-comment-wrapper .review-add-container {
   margin-top: 3vw;
-}
-.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-head {
-  height: 1.8vw;
 }
 @media (max-width: 900px) {
   .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-head {
@@ -570,6 +581,42 @@ svg * {
 }
 .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-label__input {
   display: none;
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit {
+  margin-top: 1.25vw;
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit {
+    margin-top: 2vw;
+  }
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit__button {
+  height: 2.7vw;
+  width: 10vw;
+  border-radius: 2vw;
+  background-color: #ff4015;
+  margin-right: 1.7vw;
+  font-size: 1.5vw;
+  transition: background-color 0.2s ease;
+  position: relative;
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit__button:hover {
+  background-color: #932d16;
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit__button:active {
+  top: 0.1vw;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit__button {
+    height: 5vw;
+    width: 25vw;
+    border-radius: 4vw;
+    margin-right: 0.5vw;
+    font-size: 3vw;
+  }
 }
 
 .sound-switch {
