--- a/static/css/supplierPageStyle/supplierMainStyle.css
+++ b/static/css/supplierPageStyle/supplierMainStyle.css
@@ -414,7 +414,7 @@ svg * {
 @media (max-width: 900px) {
   .reviews-wrapper .reviews-comment-wrapper .reviews-container {
     row-gap: 2vw;
-    max-height: 51vw;
+    max-height: 52vw;
   }
 }
 .reviews-wrapper .reviews-comment-wrapper .reviews-container::-webkit-scrollbar {
@@ -436,14 +436,15 @@ svg * {
 .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container {
   display: grid;
   grid-template-rows: 2vw 6vw;
-  grid-template-columns: 46vw 8.5vw;
+  grid-template-columns: 46vw 6vw;
   grid-template-areas: "name name" "review image";
   height: 8vw;
+  column-gap: 1vw;
 }
 @media (max-width: 900px) {
   .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container {
     grid-template-rows: 4vw 12vw;
-    grid-template-columns: 68vw 14vw;
+    grid-template-columns: 68vw 12vw;
     height: 16vw;
   }
 }
@@ -477,21 +478,25 @@ svg * {
 .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-image-container {
   display: flex;
   grid-area: image;
-  width: 100%;
-  height: 100%;
+  width: 6vw;
+  height: 6vw;
   align-items: center;
   justify-content: center;
   object-fit: contain;
-}
-.reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-image-container .review-image {
-  width: 6vw;
-  height: 6vw;
+  border: 0.15vw solid #6D6D6D;
+  border-radius: 0.5vw;
+  overflow: hidden;
 }
 @media (max-width: 900px) {
-  .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-image-container .review-image {
-    width: 12vw;
+  .reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-image-container {
     height: 12vw;
+    width: 12vw;
   }
+}
+.reviews-wrapper .reviews-comment-wrapper .reviews-container .review-container .review-image-container .review-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 .reviews-wrapper .reviews-comment-wrapper .review-add-container {
   margin-top: 3vw;
@@ -515,6 +520,7 @@ svg * {
 }
 .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input {
   display: flex;
+  column-gap: 1vw;
 }
 .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-textarea {
   resize: none;
@@ -543,7 +549,6 @@ svg * {
   border-radius: 0.5vw;
   width: 6vw;
   height: 6vw;
-  margin-left: 1.3vw;
 }
 @media (max-width: 900px) {
   .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment {
@@ -582,6 +587,44 @@ svg * {
 .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-label__input {
   display: none;
 }
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-preview {
+  text-align: center;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  border: 0.15vw solid;
+  border-radius: 0.5vw;
+  width: 6vw;
+  height: 6vw;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-preview {
+    width: 12vw;
+    height: 12vw;
+  }
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-preview__delete {
+  position: absolute;
+  top: -1.8vw;
+  width: 105%;
+  border: 0.15vw solid;
+  border-radius: 0.5vw;
+  font-size: 0.7vw;
+  height: 1.5vw;
+  box-shadow: 0 0 0.2vw 0.1vw rgba(0, 0, 0, 0.2) inset;
+}
+@media (max-width: 900px) {
+  .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-preview__delete {
+    top: -3.8vw;
+    font-size: 1.5vw;
+    height: 2.5vw;
+  }
+}
+.reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-text-input .review-add-attachment-preview__image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 .reviews-wrapper .reviews-comment-wrapper .review-add-container .review-add-form .review-add-submit {
   margin-top: 1.25vw;
   display: flex;
@@ -617,6 +660,29 @@ svg * {
     margin-right: 0.5vw;
     font-size: 3vw;
   }
+}
+
+.review-image-full-screen-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.review-image-full-screen-container {
+  width: 65vw;
+  height: 40vw;
+}
+.review-image-full-screen-container .review-image-full-screen {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .sound-switch {
